fixed aligning of items within .event-details without being hacky. oh yeaaa i'm proud of myself

--- a/src/app/event-card/event-card.component.scss
+++ b/src/app/event-card/event-card.component.scss
@@ -23,8 +23,24 @@
 	background-size: cover;
 }
 
+.event-details {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.start-time {
+	width: 50%;
+}
+
+.event-title {
+	text-align: right;
+	width: 50%;
+}
+
 .card .card-action {
 	border-top: none;
+	width: 50%;
 }
 
 .card-action {
